# ultratrack

./: .gitignore  CMakeLists.txt  MODEL_SELECTION.md  README.md  build.bat  download_models.bat  download_models.ps1
include/: ultratrack.hpp  version.hpp
scripts/: download_models.bat
scripts/trainer/: data_pipeline.py  deployment_pipeline.py  device_optim.py  launch.py  model_export.py  requirements.txt  requirements_basic.txt  roboflow_integration.py  test_gui.py  test_trainer.py  trainer.py  training_engine.py  validators.py
scripts/trainer/projects/hand_tracker/hand_tracker/: config.json  dataset.yaml
src/: main.cpp  simd_optimization.cpp  ultratrack.cpp
